force-app/main/default/objects/Account/fields/Timberline_Customer_Number__c.field-meta.xml
<CustomField>
    <fullName>Timberline_Customer_Number__c</fullName>
    <externalId>true</externalId>
    <label>Timberline Customer Number</label>
    <length>9</length>
    <type>Text</type>
</CustomField>