force-app/main/default/objects/Account/fields/Timberline_Customer_Number_Sequence__c.field-meta.xml
<CustomField>
    <fullName>Timberline_Customer_Number_Sequence__c</fullName>
    <formula>/*VALUE(MID(Timberline_Customer_Number__c, 1, 5) + MID(Timberline_Customer_Number__c, 7, 3))*/
VALUE(MID(Timberline_Customer_Number__c, 1, 6))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Timberline Customer Number Sequence</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>