force-app/main/default/objects/Account/fields/Timberline_Customer_Number_Sequence_New__c.field-meta.xml
<CustomField>
    <fullName>Timberline_Customer_Number_Sequence_New__c</fullName>
    <externalId>true</externalId>
    <label>Timberline Customer Number Sequence New</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>