force-app/main/default/objects/Account/fields/TracHier__Hierarchy_ID__c.field-meta.xml
<CustomField>
    <fullName>TracHier__Hierarchy_ID__c</fullName>
    <externalId>true</externalId>
    <label>Hierarchy ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>