force-app/main/default/objects/Account/fields/Ultimate_Parent_Account__c.field-meta.xml
<CustomField>
    <fullName>Ultimate_Parent_Account__c</fullName>
    <formula>IF(LEN(Parent.Name) &lt; 1, HYPERLINK(&quot;/&quot;&amp;Id, Name,&quot;_parent&quot;),
IF(LEN(Parent.Parent.Name) &lt;1, HYPERLINK(&quot;/&quot;&amp;Parent.Id,Parent.Name,&quot;_parent&quot;),
IF(LEN(Parent.Parent.Parent.Name) &lt; 1, HYPERLINK(&quot;/&quot;&amp;Parent.Parent.Id,Parent.Parent.Name,&quot;_parent&quot;),
IF(LEN(Parent.Parent.Parent.Parent.Name) &lt; 1, HYPERLINK(&quot;/&quot;&amp;Parent.Parent.Parent.Id,Parent.Parent.Parent.Name,&quot;_parent&quot;),
IF(LEN(Parent.Parent.Parent.Parent.Parent.Name) &lt; 1, HYPERLINK(&quot;/&quot;&amp;Parent.Parent.Parent.Parent.Id,Parent.Parent.Parent.Parent.Name,&quot;_parent&quot;),
IF(LEN(Parent.Parent.Parent.Parent.Parent.Parent.Name) &lt; 1 ,HYPERLINK(&quot;/&quot;&amp;Parent.Parent.Parent.Parent.Parent.Id,Parent.Parent.Parent.Parent.Parent.Name,&quot;_parent&quot;),
IF(LEN(Parent.Parent.Parent.Parent.Parent.Parent.Parent.Name) &lt; 1 ,HYPERLINK(&quot;/&quot;&amp;Parent.Parent.Parent.Parent.Parent.Parent.Id,Parent.Parent.Parent.Parent.Parent.Parent.Name,&quot;_parent&quot;),
IF(LEN(Parent.Parent.Parent.Parent.Parent.Parent.Parent.Parent.Name) &lt; 1 ,HYPERLINK(&quot;/&quot;&amp;Parent.Parent.Parent.Parent.Parent.Parent.Parent.Id,Parent.Parent.Parent.Parent.Parent.Parent.Parent.Name,&quot;_parent&quot;),
IF(LEN(Parent.Parent.Parent.Parent.Parent.Parent.Parent.Parent.Parent.Name) &lt; 1 ,HYPERLINK(&quot;/&quot;&amp;Parent.Parent.Parent.Parent.Parent.Parent.Parent.Parent.Id,Parent.Parent.Parent.Parent.Parent.Parent.Parent.Parent.Name,&quot;_parent&quot;),
IF(LEN(Parent.Parent.Parent.Parent.Parent.Parent.Parent.Parent.Parent.Parent.Name) &lt; 1 ,HYPERLINK(&quot;/&quot;&amp;Parent.Parent.Parent.Parent.Parent.Parent.Parent.Parent.Parent.Id,Parent.Parent.Parent.Parent.Parent.Parent.Parent.Parent.Parent.Name,&quot;_parent&quot;), &quot;Ultimate Parent Beyond 10 Levels&quot;))))))))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Ultimate Parent Account</label>
    <type>Text</type>
</CustomField>