force-app/main/default/objects/Account/fields/Ultimate_Parent_CompanyId__c.field-meta.xml
<CustomField>
    <fullName>Ultimate_Parent_CompanyId__c</fullName>
    <label>Ultimate Parent CompanyId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>