force-app/main/default/objects/Account/fields/Vendor_Portal_Link__c.field-meta.xml
<CustomField>
    <fullName>Vendor_Portal_Link__c</fullName>
    <label>Vendor Portal Link</label>
    <type>Url</type>
</CustomField>