force-app/main/default/objects/Account/fields/Vendor_Portal_Password__c.field-meta.xml
<CustomField>
    <fullName>Vendor_Portal_Password__c</fullName>
    <label>Vendor Portal Password</label>
    <length>50</length>
    <type>Text</type>
</CustomField>