force-app/main/default/objects/Account/fields/Vendor_Portal_Username__c.field-meta.xml
<CustomField>
    <fullName>Vendor_Portal_Username__c</fullName>
    <label>Vendor Portal Username</label>
    <length>50</length>
    <type>Text</type>
</CustomField>