force-app/main/default/objects/Account/fields/ZI_Company_Country__c.field-meta.xml
<CustomField>
    <fullName>ZI_Company_Country__c</fullName>
    <label>ZI Company Country-N</label>
    <length>255</length>
    <type>Text</type>
</CustomField>