force-app/main/default/objects/Account/fields/ZI_Company_Description__c.field-meta.xml
<CustomField>
    <fullName>ZI_Company_Description__c</fullName>
    <label>ZI Company Description-N</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>