force-app/main/default/objects/Account/fields/ZI_Company_Description_A__c.field-meta.xml
<CustomField>
    <fullName>ZI_Company_Description_A__c</fullName>
    <label>ZI Company Description_A</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>