force-app/main/default/objects/Account/fields/ZI_Company_Fax__c.field-meta.xml
<CustomField>
    <fullName>ZI_Company_Fax__c</fullName>
    <label>ZI Company Fax-N</label>
    <type>Phone</type>
</CustomField>