force-app/main/default/objects/Account/fields/ZI_Company_Fax_A__c.field-meta.xml
<CustomField>
    <fullName>ZI_Company_Fax_A__c</fullName>
    <label>ZI Company Fax_A</label>
    <type>Phone</type>
</CustomField>