force-app/main/default/objects/Account/fields/ZI_Company_is_Defunct_N__c.field-meta.xml
<CustomField>
    <fullName>ZI_Company_is_Defunct_N__c</fullName>
    <label>ZI Company is Defunct-N</label>
    <length>255</length>
    <type>Text</type>
</CustomField>