force-app/main/default/objects/Account/fields/ZI_Company_Phone__c.field-meta.xml
<CustomField>
    <fullName>ZI_Company_Phone__c</fullName>
    <label>ZI Company Phone-N</label>
    <type>Phone</type>
</CustomField>