force-app/main/default/objects/Account/fields/ZI_Company_Profile_URL_N__c.field-meta.xml
<CustomField>
    <fullName>ZI_Company_Profile_URL_N__c</fullName>
    <label>ZI Company Profile URL-N</label>
    <type>Url</type>
</CustomField>