force-app/main/default/objects/Account/fields/ZI_Company_Ranking__c.field-meta.xml
<CustomField>
    <fullName>ZI_Company_Ranking__c</fullName>
    <label>ZI Company Ranking</label>
    <length>255</length>
    <type>Text</type>
</CustomField>