force-app/main/default/objects/Account/fields/ZI_Company_State__c.field-meta.xml
<CustomField>
    <fullName>ZI_Company_State__c</fullName>
    <label>ZI Company State</label>
    <length>255</length>
    <type>Text</type>
</CustomField>