force-app/main/default/objects/Account/fields/ZI_Company_Street_A__c.field-meta.xml
<CustomField>
    <fullName>ZI_Company_Street_A__c</fullName>
    <label>ZI Company Street_A</label>
    <length>255</length>
    <type>Text</type>
</CustomField>