force-app/main/default/objects/Account/fields/ZI_Company_Website_A__c.field-meta.xml
<CustomField>
    <fullName>ZI_Company_Website_A__c</fullName>
    <label>ZI Company Website_A</label>
    <type>Url</type>
</CustomField>