force-app/main/default/objects/Account/fields/ZI_NAICS_Codes__c.field-meta.xml
<CustomField>
    <fullName>ZI_NAICS_Codes__c</fullName>
    <label>ZI NAICS Codes-N</label>
    <length>255</length>
    <type>Text</type>
</CustomField>