force-app/main/default/objects/Account/fields/ZI_Parent_Company_ID_N__c.field-meta.xml
<CustomField>
    <fullName>ZI_Parent_Company_ID_N__c</fullName>
    <label>ZI Parent Company ID-N</label>
    <length>20</length>
    <type>Text</type>
</CustomField>