force-app/main/default/objects/Account/fields/ZI_Parent_Company_Name_A__c.field-meta.xml
<CustomField>
    <fullName>ZI_Parent_Company_Name_A__c</fullName>
    <label>ZI Parent Company Name_A</label>
    <length>255</length>
    <type>Text</type>
</CustomField>