force-app/main/default/objects/Account/fields/ZI_Parent_Company_Name_N__c.field-meta.xml
<CustomField>
    <fullName>ZI_Parent_Company_Name_N__c</fullName>
    <label>ZI Parent Company Name-N</label>
    <length>255</length>
    <type>Text</type>
</CustomField>