force-app/main/default/objects/Account/fields/ZI_Revenue__c.field-meta.xml
<CustomField>
    <fullName>ZI_Revenue__c</fullName>
    <label>ZI Revenue-N</label>
    <length>255</length>
    <type>Text</type>
</CustomField>