force-app/main/default/objects/Account/fields/ZI_Revenue_Range_A__c.field-meta.xml
<CustomField>
    <fullName>ZI_Revenue_Range_A__c</fullName>
    <label>ZI Revenue Range_A</label>
    <length>255</length>
    <type>Text</type>
</CustomField>