force-app/main/default/objects/Account/fields/ZI_SIC_Codes_A__c.field-meta.xml
<CustomField>
    <fullName>ZI_SIC_Codes_A__c</fullName>
    <label>ZI SIC Codes_A</label>
    <length>255</length>
    <type>Text</type>
</CustomField>