force-app/main/default/objects/Account/fields/ZI_Ticker_Symbol_A__c.field-meta.xml
<CustomField>
    <fullName>ZI_Ticker_Symbol_A__c</fullName>
    <label>ZI Ticker Symbol_A</label>
    <length>255</length>
    <type>Text</type>
</CustomField>