force-app/main/default/objects/Account/fields/ZI_Ultimate_Parent_Company_ID_A__c.field-meta.xml
<CustomField>
    <fullName>ZI_Ultimate_Parent_Company_ID_A__c</fullName>
    <label>ZI Ultimate Parent Company ID_A</label>
    <length>20</length>
    <type>Text</type>
</CustomField>