force-app/main/default/objects/Account/validationRules/Account_Address_Max_Length.validationRule-meta.xml
<ValidationRule>
    <fullName>Account_Address_Max_Length</fullName>
    <active>false</active>
    <errorConditionFormula>LEN( BillingStreet )  &gt; 30 &amp;&amp; $Setup.rh2__PS_Settings__c.rh2__Run_Validation_Rule__c</errorConditionFormula>
    <errorDisplayField>BillingStreet</errorDisplayField>
    <errorMessage>Account Billing Street Address cannot exceed 60 characters</errorMessage>
</ValidationRule>