force-app/main/default/objects/Account/validationRules/Account_City_Max_Length.validationRule-meta.xml
<ValidationRule>
    <fullName>Account_City_Max_Length</fullName>
    <active>false</active>
    <errorConditionFormula>LEN( BillingCity )  &gt; 15 &amp;&amp; $Setup.rh2__PS_Settings__c.rh2__Run_Validation_Rule__c</errorConditionFormula>
    <errorDisplayField>BillingCity</errorDisplayField>
    <errorMessage>Account Billing City cannot exceed 15 characters</errorMessage>
</ValidationRule>