force-app/main/default/objects/Account/validationRules/Account_Name_Changed.validationRule-meta.xml
<ValidationRule>
    <fullName>Account_Name_Changed</fullName>
    <active>true</active>
    <description>User are not allowed to change the account name of an existing record.</description>
    <errorConditionFormula>NOT( ISNEW() ) &amp;&amp; ISCHANGED( Name ) &amp;&amp; NOT($Profile.Id = &apos;00e70000001JsY7&apos;) &amp;&amp; NOT($Profile.Id = &apos;00e700000017rE3&apos;) &amp;&amp; NOT($Profile.Id = &apos;00e7000000144R0&apos;)&amp;&amp; NOT(AND(RecordTypeId = &apos;01270000000UK8t&apos;, $Profile.Id = &apos;00e0g000001O0sT&apos;)) &amp;&amp; $Setup.rh2__PS_Settings__c.rh2__Run_Validation_Rule__c</errorConditionFormula>
    <errorMessage>Changing account name is not allowed. Please contact your administrator.</errorMessage>
</ValidationRule>