force-app/main/default/objects/Account/validationRules/Account_Name_Max_Length.validationRule-meta.xml
<ValidationRule>
    <fullName>Account_Name_Max_Length</fullName>
    <active>false</active>
    <errorConditionFormula>LEN( Name )  &gt; 30 &amp;&amp; $Setup.rh2__PS_Settings__c.rh2__Run_Validation_Rule__c</errorConditionFormula>
    <errorDisplayField>Name</errorDisplayField>
    <errorMessage>Account Name cannot exceed 30 characters</errorMessage>
</ValidationRule>