force-app/main/default/objects/Account/validationRules/Billing_address_is_required.validationRule-meta.xml
<ValidationRule>
    <fullName>Billing_address_is_required</fullName>
    <active>false</active>
    <errorConditionFormula>ISNEW() &amp;&amp; (ISBLANK(BillingStreet) ||  ISBLANK( BillingState ) || ISBLANK( BillingPostalCode ) || ISBLANK(BillingCountry)) &amp;&amp; $Setup.rh2__PS_Settings__c.rh2__Run_Validation_Rule__c</errorConditionFormula>
    <errorDisplayField>Name</errorDisplayField>
    <errorMessage>Complete billing address is required - Street, City, State, Zip code, Country.</errorMessage>
</ValidationRule>