force-app/main/default/objects/Account/validationRules/ES_Job_Account_Email_Edit_Block.validationRule-meta.xml
<ValidationRule>
    <fullName>ES_Job_Account_Email_Edit_Block</fullName>
    <active>true</active>
    <description>To prevent users from editing the Email on the ES Job Person Account</description>
    <errorConditionFormula>AND(

 IsPersonAccount = TRUE, 

  Id = &apos;0010g00001bRgPo&apos; ,

 ISCHANGED (PersonEmail ))</errorConditionFormula>
    <errorMessage>The ES Job Account Email cannot be changed. Please first update the Project Site account on the job.</errorMessage>
</ValidationRule>