force-app/main/default/objects/Account/validationRules/Joint_Person_Account.validationRule-meta.xml
<ValidationRule>
    <fullName>Joint_Person_Account</fullName>
    <active>true</active>
    <description>Joint person account is not allowed, eg Jack &amp; Jill Smith.</description>
    <errorConditionFormula>CONTAINS(Name, &quot;&amp;&quot; ) &amp;&amp;IsPersonAccount = true &amp;&amp; $Setup.rh2__PS_Settings__c.rh2__Run_Validation_Rule__c</errorConditionFormula>
    <errorMessage>Account name cannot contain joined name. Please enter only one person&apos;s name.</errorMessage>
</ValidationRule>