force-app/main/default/objects/Account/validationRules/Mobile_Format.validationRule-meta.xml
<ValidationRule>
    <fullName>Mobile_Format</fullName>
    <active>true</active>
    <description>Mobile format (999) 999-9999</description>
    <errorConditionFormula>AND( 
NOT((ISBLANK( PersonMobilePhone ))), 
ISCHANGED( PersonMobilePhone ) , 
NOT(REGEX(PersonMobilePhone, 
&quot;^((\\+1)?\\s?\\(\\d{3}\\)\\s?\\d{3}\\-\\d{4})?$&quot;))) &amp;&amp; $Setup.rh2__PS_Settings__c.rh2__Run_Validation_Rule__c</errorConditionFormula>
    <errorDisplayField>PersonMobilePhone</errorDisplayField>
    <errorMessage>The Mobile number on the Account is not in the correct format. Please enter a valid phone number in this format (999) 999-9999</errorMessage>
</ValidationRule>