force-app/main/default/objects/Account/listViews/Accounts_Sync_to_Timberline_Checked.listView-meta.xml
<ListView>
    <fullName>Accounts_Sync_to_Timberline_Checked</fullName>
    <booleanFilter>1 AND (2 or 3)</booleanFilter>
    <columns>Send_to_Timberline__c</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>Timberline_Customer_Number__c</columns>
    <columns>Timberline_Customer_Number__pc</columns>
    <columns>ACCOUNT.SITE</columns>
    <columns>ACCOUNT.ADDRESS1_STATE</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>ACCOUNT.TYPE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Send_to_Timberline__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>IS_PERSON_ACCOUNT</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>IS_PERSON_ACCOUNT</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <label>Accounts Sync to Timberline Checked</label>
</ListView>