force-app/main/default/objects/Account/listViews/All_mine.listView-meta.xml
<ListView>
    <fullName>All_mine</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.ADDRESS1_STATE</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>ACCOUNT.TYPE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>Timberline_Customer_Number__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Timberline_Customer_Number__c</field>
        <operation>notEqual</operation>
    </filters>
    <label>All mine</label>
</ListView>