force-app/main/default/objects/Account/listViews/Org_Account_Hierarchy.listView-meta.xml
<ListView>
    <fullName>Org_Account_Hierarchy</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.SITE</columns>
    <columns>ACCOUNT.ADDRESS1_CITY</columns>
    <columns>ACCOUNT.ADDRESS1_STATE</columns>
    <columns>Company_Id__c</columns>
    <columns>ACCOUNT.TYPE</columns>
    <columns>PARENT_NAME</columns>
    <columns>Parent_CompanyId__c</columns>
    <columns>Ultimate_Parent_Account__c</columns>
    <filterScope>Everything</filterScope>
    <label>Org_Account_Hierarchy</label>
</ListView>