force-app/main/default/objects/Account/listViews/Sync_All_Accounts.listView-meta.xml
<ListView>
    <fullName>Sync_All_Accounts</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>Timberline_Customer_Number__c</columns>
    <columns>Send_to_Timberline__c</columns>
    <columns>Last_Successful_Timberland_Update__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Timberline_Customer_Number__c</field>
        <operation>notEqual</operation>
    </filters>
    <label>Sync All Accounts</label>
</ListView>