force-app/main/default/objects/Account/listViews/Unapproved_Accounts165.listView-meta.xml
<ListView>
    <fullName>Unapproved_Accounts165</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.ADDRESS1_STREET</columns>
    <columns>ACCOUNT.ADDRESS1_CITY</columns>
    <columns>ACCOUNT.ADDRESS1_STATE</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>ACCOUNT.TYPE</columns>
    <columns>Status__c</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>ACCOUNT.CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Unapproved</value>
    </filters>
    <label>Unapproved Accounts</label>
    <sharedTo>
        <role>Call_Center</role>
    </sharedTo>
</ListView>