force-app/main/default/objects/Account/listViews/Unapproved_Rejected_Accounts.listView-meta.xml
<ListView>
    <fullName>Unapproved_Rejected_Accounts</fullName>
    <booleanFilter>1 OR 2</booleanFilter>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.ADDRESS1_STREET</columns>
    <columns>ACCOUNT.ADDRESS1_CITY</columns>
    <columns>ACCOUNT.ADDRESS1_STATE</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>ACCOUNT.TYPE</columns>
    <columns>Status__c</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>ACCOUNT.CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Rejected</value>
    </filters>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Unapproved</value>
    </filters>
    <label>Unapproved/Rejected Accounts</label>
</ListView>